--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -210,7 +210,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
     implementation 'com.android.support:multidex:2.0.1'
-    implementation project(':@react-native-community_viewpager')
+    implementation project(':react-native-pager-view')
     implementation 'com.google.firebase:firebase-analytics:17.2.3'
     implementation 'com.getkeepsafe.relinker:relinker:1.4.4'
 
