--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
     "react-native-restart": "^0.0.23",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.9.0",
-    "react-native-scrollable-tab-view": "ecency/react-native-scrollable-tab-view",
+    "react-native-scrollable-tab-view": "ecency/react-native-scrollable-tab-view#to-es6",
     "react-native-slider": "^0.11.0",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-splash-screen": "^3.2.0",
