--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -83,6 +83,11 @@
                 android:host="ecency.com"
                 android:path="/signup"
             />
+            <data 
+                android:scheme="https" 
+                android:host="ecency.com"
+                android:path="/login"
+            />
         </intent-filter>
         <intent-filter android:label="Ecency" >
             <action android:name="android.intent.action.VIEW" />
