added new react navigation packages v5

--- a/package.json
+++ b/package.json
@@ -48,6 +48,11 @@
     "@react-native-firebase/app": "^14.9.4",
     "@react-native-firebase/dynamic-links": "^14.9.4",
     "@react-native-firebase/messaging": "^14.9.4",
+    "@react-navigation/bottom-tabs": "^5.11.15",
+    "@react-navigation/compat": "5.3.20",
+    "@react-navigation/drawer": "^5.12.9",
+    "@react-navigation/native": "^5.9.8",
+    "@react-navigation/stack": "^5.14.9",
     "@tradle/react-native-http": "^2.0.0",
     "appcenter": "^4.1.0",
     "appcenter-analytics": "^4.1.0",
@@ -141,11 +146,7 @@
     "react-native-video": "^5.2.0",
     "react-native-webview": "^11.17.1",
     "react-native-youtube-iframe": "^2.1.1",
-    "react-navigation": "^4.0.10",
-    "react-navigation-drawer": "^2.3.3",
     "react-navigation-redux-helpers": "^4.0.1",
-    "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.6.2",
     "react-redux": "^7.1.1",
     "readable-stream": "1.0.33",
     "redux": "^4.0.4",
