--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@react-navigation/compat": "5.3.20",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
     "@tradle/react-native-http": "^2.0.0",
     "appcenter": "^4.1.0",
@@ -128,8 +129,8 @@
     "react-native-receive-sharing-intent": "ecency/react-native-receive-sharing-intent",
     "react-native-render-html": "^6.0.5",
     "react-native-restart": "^0.0.23",
-    "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.9.0",
+    "react-native-safe-area-context": "^3.4.1",
+    "react-native-screens": "^3.13.1",
     "react-native-scrollable-tab-view": "ecency/react-native-scrollable-tab-view",
     "react-native-slider": "^0.11.0",
     "react-native-snap-carousel": "^3.8.0",
