--- a/package.json
+++ b/package.json
@@ -130,7 +130,7 @@
     "react-native-render-html": "^6.0.5",
     "react-native-restart": "^0.0.23",
     "react-native-safe-area-context": "^3.4.1",
-    "react-native-screens": "^3.13.1",
+    "react-native-screens": "3.13.1",
     "react-native-scrollable-tab-view": "ecency/react-native-scrollable-tab-view",
     "react-native-slider": "^0.11.0",
     "react-native-snap-carousel": "^3.8.0",
