support /auth deeplink

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -95,7 +95,7 @@
             <data 
                 android:scheme="https" 
                 android:host="ecency.com"
-                android:path="/login"
+                android:path="/auth"
             />
            <data 
                 android:scheme="https" 
