--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
+    "@tanstack/query-async-storage-persister": "^4.3.9",
     "@tanstack/react-query": "^4.3.9",
+    "@tanstack/react-query-persist-client": "^4.3.9",
     "@tradle/react-native-http": "^2.0.0",
     "appcenter": "^4.1.0",
     "appcenter-analytics": "^4.1.0",
