--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "react-native-iap": "^7.5.6",
     "react-native-image-crop-picker": "^0.35.2",
     "react-native-image-zoom-viewer": "^2.2.27",
-    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-iphone-x-helper": "Norcy/react-native-iphone-x-helper",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-level-fs": "^3.0.0",
     "react-native-linear-gradient": "^2.4.2",
