--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-native-config": "luggit/react-native-config#master",
     "react-native-crypto": "^2.2.0",
     "react-native-date-picker": "^4.2.0",
+    "react-native-device-info": "^10.2.1",
     "react-native-dynamic": "^1.0.0",
     "react-native-extended-stylesheet": "^0.10.0",
     "react-native-fast-image": "^8.3.2",
