--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,29 +9,33 @@ target 'Ecency' do
   pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
   # Pods for Ecency
 
-  use_react_native!(:path => config["reactNativePath"])
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # to enable hermes on iOS, change `false` to `true` and then install pods
+    :hermes_enabled => false
+  )
   
   target 'EcencyTests' do
     inherit! :complete
     # Pods for testing
   end
 
+
+
+  # Enables Flipper.
+  #
+  # Note that if you have use_frameworks! enabled, Flipper will not work and
+  # you should disable the next line.
+  # use_flipper!()
+
   post_install do |installer|
+    react_native_post_install(installer)
+    __apply_Xcode_12_5_M1_post_install_workaround(installer)
     installer.pods_project.targets.each do |target|
       target.build_configurations.each do |config|
         config.build_settings["ONLY_ACTIVE_ARCH"] = "NO"
       end
     end
-  end
-
-end
-
-target 'Ecency-tvOS' do
-  # Pods for Ecency-tvOS
-
-  target 'Ecency-tvOSTests' do
-    inherit! :search_paths
-    # Pods for testing
   end
 
 end
