android rendering successfully

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -121,6 +121,12 @@ def jscFlavor = 'org.webkit:android-jsc:+'
  * and the benefits of using Hermes will therefore be sharply reduced.
  */
 def enableHermes = project.ext.react.get("enableHermes", false);
+
+/**
+ * Architectures to build native code for in debug.
+ */
+def nativeArchitectures = project.getProperties().get("reactNativeDebugArchitectures")
+
 configurations.all {
     resolutionStrategy {
         force "com.facebook.soloader:soloader:0.9.0+"
