--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
+    "@reduxjs/toolkit": "^1.8.6",
     "@tanstack/query-async-storage-persister": "^4.3.9",
     "@tanstack/react-query": "^4.3.9",
     "@tanstack/react-query-persist-client": "^4.3.9",
@@ -87,6 +88,7 @@
     "path-browserify": "0.0.0",
     "process": "^0.11.0",
     "punycode": "^1.2.4",
+    "qs": "^6.11.0",
     "querystring-es3": "~0.2.0",
     "react": "17.0.2",
     "react-intl": "^3.9.2",
@@ -152,10 +154,10 @@
     "react-navigation-redux-helpers": "^4.0.1",
     "react-redux": "^7.1.1",
     "readable-stream": "1.0.33",
-    "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
+    "redux-persist-filesystem-storage": "^4.1.0",
     "redux-promise": "^0.6.0",
-    "redux-thunk": "^2.3.0",
+    "redux-thunk": "^2.4.1",
     "rn-fetch-blob": "^0.12.0",
     "rn-placeholder": "^1.3.2",
     "rtl-detect": "^1.0.4",
@@ -201,7 +203,6 @@
     "react-test-renderer": "17.0.2",
     "reactotron-react-native": "^5.0.0",
     "reactotron-redux": "^3.1.3",
-    "redux-devtools-extension": "^2.13.5",
     "rn-nodeify": "^10.3.0"
   },
   "lint-staged": {
