--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "react-redux": "^8.0.4",
     "readable-stream": "1.0.33",
     "redux-persist": "^6.0.0",
+    "redux-persist-filesystem-storage": "^4.1.0",
     "redux-promise": "^0.6.0",
     "rn-fetch-blob": "^0.12.0",
     "rn-placeholder": "^1.3.2",
