--- a/package.json
+++ b/package.json
@@ -179,7 +179,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^26.6.3",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "eslint": "7.14.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-eslint-comments": "^3.1.1",
@@ -194,11 +194,11 @@
     "jest": "^26.6.3",
     "jetifier": "^1.6.3",
     "lint-staged": "^7.2.0",
-    "metro-react-native-babel-preset": "^0.66.0",
+    "metro-react-native-babel-preset": "0.72.3",
     "prettier": "^2.0.2",
     "prettier-eslint": "^9.0.1",
     "react-native-codegen": "^0.0.13",
-    "react-test-renderer": "17.0.2",
+    "react-test-renderer": "18.1.0",
     "reactotron-redux": "^3.1.3",
     "rn-nodeify": "^10.3.0"
   },
