--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,6 +21,7 @@ buildscript {
         googlePlayServicesVisionVersion = "17.0.2"
         googlePlayServicesVersion = "16.+"
         firebaseVersion = "17.3.4"
+        kotlinVersion = "1.6.0"
         if (System.properties['os.arch'] == "aarch64") {
             // For M1 Users we need to use the NDK 24 which added support for aarch64
             ndkVersion = "24.0.8215888"
@@ -38,7 +39,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.10'
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:5.0.1")
-        classpath 'com.bugsnag:bugsnag-android-gradle-plugin:5.+'
+        classpath 'com.bugsnag:bugsnag-android-gradle-plugin:7.+'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
