--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "bump-patch": "npm version patch --no-git-tag-version",
     "bump-minor": "npm version minor --no-git-tag-version",
     "bump-major": "npm version major --no-git-tag-version",
-    "postinstall": "patch-package && node_modules/.bin/rn-nodeify --install --hack --yarn && cd ios && pod install"
+    "postinstall": "npx patch-package && node_modules/.bin/rn-nodeify --install --hack --yarn && cd ios && pod install"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.16.7",
@@ -72,6 +72,7 @@
     "core-js": "3.6.4",
     "crypto-js": "^3.1.9-1",
     "currency-symbol-map": "^4.0.4",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "diff-match-patch": "^1.0.5",
     "dns.js": "^1.0.1",
     "domain-browser": "^1.1.1",
