--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "react-native-actionsheet": "ecency/react-native-actionsheet",
     "react-native-animatable": "^1.3.3",
     "react-native-autoheight-webview": "^1.5.8",
+    "react-native-bootsplash": "^4.3.2",
     "react-native-camera": "^4.2.1",
     "react-native-chart-kit": "^6.11.0",
     "react-native-config": "luggit/react-native-config#master",
