refined splash screen apprearence

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -275,6 +275,7 @@ dependencies {
     implementation 'com.facebook.react:react-native:+'  // From node_modules
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02'
+    implementation "androidx.core:core-splashscreen:1.0.0"
     implementation 'com.android.support:multidex:2.0.1'
     implementation project(':react-native-pager-view')
     implementation 'com.getkeepsafe.relinker:relinker:1.4.4'
