--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@hiveio/dhive": "^1.0.1",
     "@native-html/iframe-plugin": "^2.6.1",
     "@native-html/table-plugin": "^5.3.1",
+    "@notifee/react-native": "^7.0.4",
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-clipboard/clipboard": "^1.8.5",
     "@react-native-community/cameraroll": "^1.3.0",
