--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -158,6 +158,9 @@
       <meta-data
           android:name="com.bugsnag.android.API_KEY"
           android:value="88a8a25738939a80ba49f1d5289dbc80" />
+      <meta-data 
+            android:name="google_analytics_adid_collection_enabled" 
+            android:value="false" />
     </application>
 
 </manifest>
