upgrade rn firebase

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,11 @@
+$RNFirebaseAsStaticFramework = true
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
+use_frameworks! :linkage => :static
 platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
+
 
 target 'Ecency' do
   config = use_native_modules!
