quick commands for flipper and emulator

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "bump-patch": "npm version patch --no-git-tag-version",
     "bump-minor": "npm version minor --no-git-tag-version",
     "bump-major": "npm version major --no-git-tag-version",
-    "postinstall": "npx patch-package && node_modules/.bin/rn-nodeify --install --hack --yarn && cd ios && pod install"
+    "postinstall": "npx patch-package && node_modules/.bin/rn-nodeify --install --hack --yarn && cd ios && pod install",
+    "ubuntu:pixel-6": "cd $ANDROID_HOME/tools && __NV_PRIME_RENDER_OFFLOAD=1 __GLX_VENDOR_LIBRARY_NAME=nvidia emulator -avd pixel-6 -gpu host",
+    "ubuntu:flipper": "__NV_PRIME_RENDER_OFFLOAD=1 __GLX_VENDOR_LIBRARY_NAME=nvidia flipper"
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.16.7",
