--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "react-native-extended-stylesheet": "^0.10.0",
     "react-native-fast-image": "^8.3.2",
     "react-native-fingerprint-scanner": "hieuvp/react-native-fingerprint-scanner",
+    "react-native-flipper": "^0.174.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-highlight-words": "^1.0.1",
     "react-native-iap": "^12.4.2",
@@ -156,8 +157,8 @@
     "react-native-youtube-iframe": "^2.1.1",
     "react-navigation-redux-helpers": "^4.0.1",
     "react-redux": "^8.0.4",
-    "reactotron-react-native": "^5.0.3",
     "readable-stream": "1.0.33",
+    "redux-flipper": "^2.0.2",
     "redux-persist": "^6.0.0",
     "redux-persist-filesystem-storage": "^4.1.0",
     "redux-promise": "^0.6.0",
@@ -203,6 +204,7 @@
     "prettier-eslint": "^9.0.1",
     "react-native-codegen": "^0.0.13",
     "react-test-renderer": "18.1.0",
+    "reactotron-react-native": "^5.0.3",
     "reactotron-redux": "^3.1.3",
     "rn-nodeify": "^10.3.0"
   },
