--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "react-native-extended-stylesheet": "^0.10.0",
     "react-native-fast-image": "^8.3.2",
     "react-native-fingerprint-scanner": "hieuvp/react-native-fingerprint-scanner",
+    "react-native-flipper": "^0.174.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-highlight-words": "^1.0.1",
     "react-native-iap": "^12.4.2",
@@ -164,7 +165,7 @@
     "rn-fetch-blob": "^0.12.0",
     "rn-placeholder": "^1.3.2",
     "rtl-detect": "^1.0.4",
-    "speakingurl": "^14.0.1",
+    "speakingurl": "^1.0.1",
     "stacktrace-parser": "0.1.4",
     "stream-browserify": "^3.0.0",
     "string_decoder": "~0.10.25",
