opening inbox on continue after registering

--- a/ios/Ecency/Info.plist
+++ b/ios/Ecency/Info.plist
@@ -116,6 +116,21 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>LSApplicationQueriesSchemes</key>
+<array>
+    <string>message</string>
+    <string>readdle-spark</string>
+    <string>airmail</string>
+    <string>ms-outlook</string>
+    <string>googlegmail</string>
+    <string>inbox-gmail</string>
+    <string>ymail</string>
+    <string>superhuman</string>
+    <string>yandexmail</string>
+    <string>fastmail</string>
+    <string>protonmail</string>
+    <string>szn-email</string>
+</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>bugsnag</key>
